--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  parse_server_sdk: ^5.1.3
+  parse_server_sdk_flutter: ^7.0.0  
   flutter:
     sdk: flutter
 
@@ -35,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  parse_server_sdk_flutter: ^9.0.0
+  # parse_server_sdk_flutter: ^9.0.0
   flutter_dotenv: ^5.2.1
 
 dev_dependencies:
